# LifeMemoryTracker12

./: .replit  Dockerfile  LICENSE  NETLIFY_DEPLOYMENT_GUIDE.md  README.md  _redirects  access_log.txt  admin_dashboard.py  admin_users.py  advanced_analytics.py  ai_personality_engine.py  api_integrations.py  app.py  auto_updater.py  business_intelligence_engine.py  collaboration_tools.py  cookies.txt  docker-compose.yml  enterprise_features.py  feature_restoration_engine.py  gamification_engine.py  hyper_productivity_engine.py  hyper_productivity_engine_simple.py  life_memory.json  main.py  mega_features_engine.py  mega_features_engine_simple.py  models.py  netlify.toml  notification_system.py  performance_optimizer.py  production_config.py  production_features.py  production_monitoring.py  pyproject.toml  quantum_mega_engine.py  quantum_mega_engine_simple.py  replit.md  replit_auth.py  runtime.txt  (+7 more)
.github/: dependabot.yml
attached_assets/: Pasted--2025-06-16-03-28-09-0000-4400-INFO-Starting-gunicorn-23-0-0-2025-06-16-03-28-09-0000-440-1750044517044_1750044517045.txt  Pasted--2025-06-16-03-28-09-0000-4400-INFO-Starting-gunicorn-23-0-0-2025-06-16-03-28-09-0000-440-1750044657636_1750044657637.txt  Pasted-Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-The-build-is-fa-175-1750101109786_1750101109787.txt  Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-The-build-is-fa-1750100725346_1750100725349.txt  index (2)_1750042079204.html  life_memory (2)_1750042079205.json  main (2)_1750042079205.py  (+2 more)
(+13 files in other folders)
